--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation "org.jetbrains.lets-plot:lets-plot-common:1.5.2"
     implementation "org.jetbrains.lets-plot:lets-plot-batik:1.5.2"
     implementation "org.jetbrains.lets-plot:lets-plot-kotlin-api:1.0.0-rc1"
+    implementation "org.deeplearning4j:deeplearning4j-core:0.9.1"
 }
