--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,9 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.nd4j:nd4j-native-platform:0.9.1"
+    implementation "org.nd4j:nd4j-native-platform:1.0.0-beta7"
     implementation "org.jetbrains.lets-plot:lets-plot-common:1.5.2"
     implementation "org.jetbrains.lets-plot:lets-plot-batik:1.5.2"
     implementation "org.jetbrains.lets-plot:lets-plot-kotlin-api:1.0.0-rc1"
-    implementation "org.deeplearning4j:deeplearning4j-core:0.9.1"
+    implementation "org.deeplearning4j:deeplearning4j-core:1.0.0-beta7"
 }
